--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,11 @@ plotly
 # APIs & Utilities
 requests
 joblib
+fastapi>=0.100.0
+uvicorn[standard]>=0.23.0
+python-multipart>=0.0.6
+httpx>=0.24.0
+python-dotenv>=1.0.0
+imbalanced-learn>=0.11.0
+pydantic>=2.0.0
 shap
