--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,8 @@ pandas
 numpy
 scikit-learn
 xgboost
+matplotlib
+seaborn
 
 # Web App & Plotting
 streamlit
@@ -19,3 +21,4 @@ python-dotenv>=1.0.0
 imbalanced-learn>=0.11.0
 pydantic>=2.0.0
 shap
+
